--- a/Dati.tex
+++ b/Dati.tex
@@ -9,35 +9,35 @@
 %----------------------------------------------------------------------------------------
 
 % Data di approvazione del piano da parte del tutor interno; nel formato GG Mese AAAA
-% compilare inserendo al posto di GG 2 cifre per il giorno, e al posto di 
+% compilare inserendo al posto di GG 2 cifre per il giorno, e al posto di
 % AAAA 4 cifre per l'anno
 \newcommand{\dataApprovazione}{Data}
 
 % Dati dello Studente
-\newcommand{\nomeStudente}{Pinco}
-\newcommand{\cognomeStudente}{Pallino}
-\newcommand{\matricolaStudente}{1000000}
-\newcommand{\emailStudente}{mail@studenti.unipd.it}
-\newcommand{\telStudente}{+ 39 000 00 00 000}
+\newcommand{\nomeStudente}{Nicola}
+\newcommand{\cognomeStudente}{Salvadore}
+\newcommand{\matricolaStudente}{1143452}
+\newcommand{\emailStudente}{nicola.salvadore@studenti.unipd.it}
+\newcommand{\telStudente}{+ 39 366 32 80 123}
 
 % Dati del Tutor Aziendale
-\newcommand{\nomeTutorAziendale}{nomeTutor}
-\newcommand{\cognomeTutorAziendale}{cognomeTutor}
+\newcommand{\nomeTutorAziendale}{Francesco}
+\newcommand{\cognomeTutorAziendale}{Costa}
 \newcommand{\emailTutorAziendale}{mail@mail.it}
-\newcommand{\telTutorAziendale}{+ 39 000 00 00 000}
+\newcommand{\telTutorAziendale}{+39 333 262 8017}
 \newcommand{\ruoloTutorAziendale}{}
 
 % Dati dell'Azienda
-\newcommand{\ragioneSocAzienda}{Azienda S.p.A}
-\newcommand{\indirizzoAzienda}{Via Roma 1, Roma (RM)}
-\newcommand{\sitoAzienda}{http://example.com/}
+\newcommand{\ragioneSocAzienda}{Alternative Studio}
+\newcommand{\indirizzoAzienda}{Via Sebastiano Serena 9 - 35128, Padova (PD)}
+\newcommand{\sitoAzienda}{https://www.alternativestudio.it/}
 \newcommand{\emailAzienda}{mail@mail.it}
-\newcommand{\partitaIVAAzienda}{P.IVA 12345678999}
+\newcommand{\partitaIVAAzienda}{P.IVA it 04960660282}
 
 % Dati del Tutor Interno (Docente)
 \newcommand{\titoloTutorInterno}{Prof.}
-\newcommand{\nomeTutorInterno}{NomeDocente}
-\newcommand{\cognomeTutorInterno}{CognomeDocente}
+\newcommand{\nomeTutorInterno}{Paolo}
+\newcommand{\cognomeTutorInterno}{Baldan}
 
 \newcommand{\prospettoSettimanale}{
      % Personalizzare indicando in lista, i vari task settimana per settimana
@@ -51,31 +51,31 @@
             \item Presa visione dell’infrastruttura esistente;
             \item Formazione sulle tecnologie adottate;
         \end{itemize}
-        \item \textbf{Seconda Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Seconda Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Terza Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Terza Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Quarta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Quarta Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Quinta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Quinta Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Sesta Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Sesta Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Settima Settimana - Sottotitolo (XX ore)} 
+        \item \textbf{Settima Settimana - Sottotitolo (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
-        \item \textbf{Ottava Settimana - Conclusione (XX ore)} 
+        \item \textbf{Ottava Settimana - Conclusione (XX ore)}
         \begin{itemize}
             \item ;
         \end{itemize}
@@ -89,7 +89,7 @@
 	 \item \underline{\textit{O01}}: primo obiettivo;
 	 \item \underline{\textit{O02}}: secondo obiettivo;
 	 \item \underline{\textit{O03}}: terzo obiettivo;
-	 
+
 }
 
 \newcommand{\obiettiviDesiderabili}{
