--- a/Template/Sezioni/ScopoStage.tex
+++ b/Template/Sezioni/ScopoStage.tex
@@ -3,7 +3,8 @@
 %----------------------------------------------------------------------------------------
 \section*{Scopo dello stage}
 % Personalizzare inserendo lo scopo dello stage, cioè una breve descrizione
-Lo scopo di questo progetto di stage è ... .
+Alternative Studio è...
 
-Lo studente avrà il compito di ... .
+Lo scopo di questo progetto di stage è inserire lo studente all'interno di un ambiente lavorativo dinamico, nel quale imparerà a distinguere tutte le fasi che attraversa un prodotto, dall'analisi dei requisiti alla messa in produzione. In particolare sarà coinvolto nella creazione di un applicazione android entrando a conoscenza con tecnologie nuove e in continuo sviluppo, come Ionic e Capacitor per lo sviluppo di web app, Angular e Vue.js, utilizzando linguaggi quali Javascript e Typescript. Per lo sviluppo lato mobile dovrà utilizzare strumenti come Android Studio, Gradle e linguaggio Java.
 
+Lo studente avrà il compito di mettere in produzione un applicazione funzionante che rispetti tutti i requisiti assegnati dal tutor aziendale, quali funzionalità di localizzazione GPS, interfaccia user-friendly, sistema di notifiche.
